icewm (1.4.3.0~pre-20171104-1) experimental; urgency=low

  * New upstream snapshot

 -- Eduard Bloch <blade@debian.org>  Sat, 04 Nov 2017 12:19:47 +0100

icewm (1.4.3.0~pre-20171017-1) experimental; urgency=low

  * New upstream snapshot
    + includes FTBFS fixes (closes: #877613)
    + various fixes for colormap handling (#261876 related)
    + manpage updates (mostly in the previous snapshots, closes: #711603)
    + taskbar shouldn't be focusable anymore (closes: #174712)

  [ Helmut Grohne ]
  * Fix FTCBFS: Let dh_auto_configure pass cross compilers (closes: #850919)

 -- Eduard Bloch <blade@debian.org>  Tue, 17 Oct 2017 19:49:37 +0200

icewm (1.4.3.0~pre-20171002-2) experimental; urgency=low

  * Fix FTBFS due to accidentally removed libsndfile1-dev dependency
  * Change of x-terminal-emulator call to xterm in the "Restart as Xterm"
    function, since this ends deadly with multi-window-single-session
    implementations like terminator (partial fix of #224537)

 -- Eduard Bloch <blade@debian.org>  Mon, 02 Oct 2017 20:39:43 +0200

icewm (1.4.3.0~pre-20171002-1) experimental; urgency=low

  * New upstream snapshot
    - Fixed space allocation below taskbar in certain display setups (thanks to
      Dmitry Semyonov, closes: #874271, #536251)
    - Fixes/Improves automatic discovery of network devices including new
      systemd naming scheme, closes: #801867, #790745)
    - Overhauled icon space allocation (probably closes: #400880)
  * Changed version string (this is preview, 1.4.3 is not released yet)
  * Font size tuning (smaller and less bold)
  * Dropped dependency on libesd (will be used if present through libao,
    detected at runtime; closes: #856080)
  * Documented upstream bug tracker (closes: #802181)
  * Drop deprecated symlink for deprecated themes gtk/gtk2 (closes: #877183)

 -- Eduard Bloch <blade@debian.org>  Mon, 02 Oct 2017 18:51:17 +0200

icewm (1.4.3+mod+20170901-1) experimental; urgency=low

  * New (unofficial fork) upstream snapshot