@@ -1,6 +1,5 @@
 usr/bin/icehelp
 usr/bin/icesound
-usr/bin/icewmtray
 usr/bin/icewm-session
 usr/bin/icewmhint
 usr/bin/icesh
