@@ -1,6 +1,7 @@
 icewm (1.4.3.0~pre-20171104-1) experimental; urgency=low
 
   * New upstream snapshot
+    - dropped icewmtray binary (not built-in feature)
 
  -- Eduard Bloch <blade@debian.org>  Sat, 04 Nov 2017 12:19:47 +0100
 
